--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Women college students -- Fiction'
 - !lcc 'PT'
+- GITenberg
 title: Een Meisje-Studentje
 url: http://www.gutenberg.org/ebooks/29044
